# BookStore

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  hello.py  pyproject.toml
.github/workflows/: build.yml
bookstore/: settings.py  urls.py
order/: urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializers.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: urls.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializers.py  product_serializers.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py
product/viewsets/: product_viewset.py
static/: index.html
