[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Book Store API"
authors = ["iury santos <iurysantos654@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
django = "^5.0"
factory-boy = "^3.3.3"
djangorestframework = "^3.16.1"
django-rest-framework = "^0.1.0"
pytest-django = "^4.11.1"
faker = "^40.1.0"
django-extensions = "^4.1"
django-debug-toolbar = "^6.1.0"
psycopg2-binary = "^2.9.0"
make = "^0.1.6.post2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
